# photo-app

./: .dockerignore  .env.example  .env.local.no-secrets  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  FACE_RECOGNITION.md  PLAN.md  README.md  alembic.ini  caption_quality_report.md  config.json  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  wrangler.jsonc
.claude/: settings.json
.claude/hooks/: package_audit_check.sh
.github/workflows/: tests.yml
api/: index.py
app/: chroma.py  config.py  db.py  models.py
app/api/: auth.py  main.py
app/db/: __init__.py  engine.py  orm.py  schema.py  session.py  types.py  upsert.py
app/indexer/: CLAUDE.md  caption.py  cli.py  embed.py  google_metadata.py  location.py  merge.py  scan.py  thumb.py
app/search/: query.py
app/storage/: __init__.py  base.py  local.py  r2.py
app/vectordb/: base.py  (+3 more)
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  INDEXING.md  REFACTOR_SUGGESTIONS.md  ROADMAP.md  SCAN_TX_NOTE.md  photos_filters_analysis.md
migrations/: env.py
plans/: caption_v3_evaluation_plan.md  embed_schema_version_plan.md  user_metadata_edits_plan.md
scripts/: merge_takeouts.py  migrate.sh  pg.sh  setup_script  transfer.py  transfer_embeddings.py  upload_photos_to_r2.py
tests/: conftest.py  test_api.py  test_auth.py  test_caption.py  test_embed.py  test_google_metadata.py  test_integration_pipeline.py  test_location.py  test_merge.py  test_scan.py  test_search.py  test_search_real_backend.py  test_storage.py  test_vector_backend.py
worker/: index.ts
(+51 files in other folders)
