[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "family-photos-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "chromadb",
    "openai",
    "Pillow",
    "pillow-heif",
    "exifread",
    "python-dotenv",
    "pydantic>=2",
    "reverse_geocoder==1.5.1",
    "sqlalchemy>=2,<3",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.13",
    "boto3>=1.34",
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
photos-index = "app.indexer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
markers = [
    "requires_postgres: needs TEST_DATABASE_URL pointing at a Postgres+pgvector instance",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-docker>=3.2",
    "httpx",
]
